[package]
name = "fs-stat"
version = "0.1.5"
authors = [ "Viktor Kuroljov <viktor@ku.family>" ]
edition = "2018"
description = "libc's stat, lstat and fstat bindings to rust made accessible"
readme = "README.md"
homepage = "https://github.com/viktor-ku/fs-stat"
repository = "https://github.com/viktor-ku/fs-stat"
license = "MIT"
keywords = [ "libc", "stat", "lstat", "fstat", "fs" ]
categories = [ "os", "filesystem", "api-bindings" ]
exclude = [
  ".commitlintrc.yml",
  ".github/",
  ".gitignore",
  ".versionrc.json",
  "Makefile",
  "ci/",
  "files/",
  "git-hooks/",
  "package.json",
  "package-lock.json",
  "tsconfig.json",
  "rustfmt.toml"
]

[dependencies]
libc = "0.2"
errno = "0.2"

[dev-dependencies]
pretty_assertions = "0.6"
